Registration tests